--- a/word_cloud/requirements.txt
+++ b/word_cloud/requirements.txt
@@ -1,12 +1,6 @@
-contourpy==1.1.0
-cycler==0.11.0
-fonttools==4.42.1
-kiwisolver==1.4.5
-matplotlib==3.7.2
-numpy==1.25.2
-packaging==23.1
-Pillow==10.0.0
-pyparsing==3.0.9
-python-dateutil==2.8.2
-six==1.16.0
+# DO NOT include azure-functions-worker in this file
+# The Python Worker is managed by Azure Functions platform
+# Manually managing azure-functions-worker may cause unexpected issues
+
+azure-functions
 wordcloud==1.9.2
